# wise

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  architecture-overview.md  collection-validation-report.json  docker-compose.yml  pyproject.toml  pytest.ini  vercel.json
.github/workflows/: ci.yml  open-grace-ci.yml  open-grace-dependency-audit.yml  open-grace-sbom.yml  open-grace-secret-scan.yml
apps/: README.md
apps/demonstration-surface/: README.md  area.js  commerce.js  commercial.js  index.html  object.js  species.js  styles.css
apps/open-grace-registry/: README.md  package-lock.json  package.json
apps/web/: .env.example  README.md  index.html  lighthouse.config.json  metadata-templates.json  next.config.ts  opengraph-templates.json  package-lock.json  package.json  robots.txt  sitemap.xml  vercel.json
content/collections/: african-kingdoms.md  ancient-maps.md  big-cats-of-the-world.md  cities-of-the-silk-road.md  endangered-earth.md  great-civilizations.md  oceans-of-the-world.md  sacred-mountains.md  wonders-of-australia.md  world-heritage-icons.md
content/newsletter/: collections.md  products.md  species.md  welcome.md
content/pinterest/: pin-brief-01.md  pin-brief-02.md  pin-brief-03.md  pin-brief-04.md  pin-brief-05.md
content/products/: african-lion-conservation-poster.md  ancient-civilizations-puzzle-set.md  apollo-11-space-mission-poster.md  big-cats-portfolio-book.md  book-big-cats.md  book-world-heritage.md  calendar-wildlife.md  calendar-world-heritage.md  framed-masterpiece.md  framed-vermeer.md  great-wall-canvas-print.md  (+27 more)
data/: README.md
infrastructure/: README.md
rights/: __init__.py  asset-registry.json  attribution-registry.json  jurisdiction-rules.json  license-registry.json  lifecycle.py  provenance-registry.json  publication-approvals.json  source-registry.json  summary-metrics.json
scripts/: validate_alembic_heads.py  validate_public_collection.py
services/: README.md
services/analytics-service/: Dockerfile  README.md  pyproject.toml
services/analytics-service/migrations/versions/: 001_user_events.py
services/analytics-service/src/wise_analytics/: __init__.py  database.py  main.py  models.py  repository.py  schemas.py  settings.py
services/analytics-service/src/wise_analytics/routes/: events.py
services/api-service/: Dockerfile  README.md  pyproject.toml
services/api-service/src/wise_api/: __init__.py  area_assembler.py  area_repository.py  assembler.py  assembler_common.py  commerce_catalog.py  commerce_providers.py  database.py  main.py  repository.py  settings.py  source_lookup.py  species_assembler.py  species_repository.py
services/api-service/src/wise_api/routes/: areas.py  commerce.py  map.py  objects.py  species.py
services/discovery-service/: Dockerfile  README.md  pyproject.toml
services/discovery-service/src/discovery_service/: __init__.py  main.py
services/discovery-service/src/discovery_service/routes/: rc1.py  v1.py
services/knowledge-graph-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/knowledge-graph-service/src/wise_knowledge_graph/: __init__.py  main.py
services/knowledge-graph-service/src/wise_knowledge_graph/routes/: rc1.py
services/metadata-service/: Dockerfile  README.md  pyproject.toml
services/metadata-service/src/metadata_service/: __init__.py  main.py
services/metadata-service/src/metadata_service/routes/: rc1.py
services/orchestrator-service/: Dockerfile  README.md  pyproject.toml
services/orchestrator-service/src/wise_orchestrator/: database.py  dependencies.py  main.py  rc1_run_service.py  run_service.py  settings.py
services/orchestrator-service/src/wise_orchestrator/routes/: rc1.py  registry.py  runs.py
services/preservation-service/: Dockerfile  README.md  pyproject.toml
services/preservation-service/src/wise_preservation/: __init__.py  main.py
services/preservation-service/src/wise_preservation/routes/: rc1.py
tests/: __init__.py  conftest.py  portfolio_helpers.py  test_contracts.py  test_rc11_showcase_data.py  test_rc12_marketing_content.py  test_rc13_representation_expansion.py  test_rc14_flagship_content.py  test_rc17_rights_provenance.py  test_rc19_public_collection_validation.py  test_rc7_commerce.py  test_rc9_portfolio_data.py  test_smoke.py  test_species_contracts.py
(+471 files in other folders)
