[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-service"
version = "0.1.0"
description = "WISE api-service — architecture-v1.0 scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wise-common",
    "wise-contracts",
    "wise-registry",
    "wise-reference",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wise_api"]

[tool.uvicorn]
factory = false
