[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metadata-service"
version = "0.1.0"
description = "WISE metadata-service — architecture-v1.0 scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wise-common",
    "wise-contracts",
    "wise-metadata",
    "wise-reference",
    "wise-registry",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metadata_service"]

[tool.uvicorn]
factory = false
