[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator-service"
version = "0.1.0"
description = "WISE orchestrator — LangGraph agent orchestration (architecture-v1.0 Phase 0)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wise-common",
    "wise-contracts",
    "wise-registry",
    "wise-orchestration",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wise_orchestrator"]
