[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preservation-service"
version = "0.1.0"
description = "WISE preservation-service — architecture-v1.0 scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wise-common",
    "wise-contracts",
    "wise-reference",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wise_preservation"]

[tool.uvicorn]
factory = false
